syntax = "proto3";
package app.v1;

import "buf/validate/validate.proto";
import "kernel/encoding.proto";
import "kernel/resource.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/app/v1";

// TrackingMiddleware is the definition of the TrackingMiddleware object.
// TrackingMiddleware implements interface of the middleware.
message TrackingMiddleware {
    // [REQUIRED]
    // APIVersion is the defined version of the midleware.
    // This value must be "app/v1".
    string APIVersion = 1 [json_name = "apiVersion", (buf.validate.field).string.const = "app/v1"];

    // [REQUIRED]
    // Kind is the kind of this object.
    // This value must be "TrackingMiddleware".
    string Kind = 2 [json_name = "kind", (buf.validate.field).string.const = "TrackingMiddleware"];

    // [OPTIONAL]
    // Metadata is the metadata of the http logger object.
    // If not set, both name and namespace in the metadata
    // are treated as "default".
    kernel.Metadata Metadata = 3 [json_name = "metadata"];

    // [OPTIONAL]
    // Spec is the specification of the middleware.
    // Default values are used when nothing is set.
    TrackingMiddlewareSpec Spec = 4 [json_name = "spec"];
}

// TrackingMiddlewareSpec is the specifications of the TrackingMiddleware object.
message TrackingMiddlewareSpec {
    // [OPTIONAL]
    // ErrorHandler is the reference to a ErrorHandler object.
    // Referred object must implement ErrorHandler interface.
    // Default error handler is used when not set.
    kernel.Reference ErrorHandler = 1 [json_name = "errorHandler"];

    // [OPTIONAL]
    // Encoding is the type of encoding used to generate IDs.
    // Default is [Base32HexEscaped].
    kernel.EncodingType Encoding = 2 [json_name = "encoding"];

    // [OPTIONAL]
    // RequestIDProxyName is the HTTP header name to proxy request ID.
    // If not set, request ID is not proxied.
    // Default is not set.
    string RequestIDProxyName = 3 [json_name = "requestIDProxyName", (buf.validate.field).string.pattern = "^[0-9a-zA-Z-_]*$"];

    // [OPTIONAL]
    // TraceIDProxyName is the HTTP header name to proxy trace ID.
    // If not set, trace ID is not proxied.
    // Default is not set.
    string TraceIDProxyName = 4 [json_name = "traceIDProxyName", (buf.validate.field).string.pattern = "^[0-9a-zA-Z-_]*$"];

    // [OPTIONAL]
    // TraceIDExtractName is the HTTP header name to extrace
    // a trace ID from the request headers.
    // If not set, a newly generated trace ID is always used.
    // Default is not set.
    string TraceIDExtractName = 5 [json_name = "traceIDExtractName", (buf.validate.field).string.pattern = "^[0-9a-zA-Z-_]*$"];
}
